--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Crypto CFD Risk Assessment & Scoring Matrix</h1>
-    <p>Evaluating risk for onboarding indirect Crypto CFD clients paying rent to a property owner.</p>
+    <p>Evaluating risk for onboarding indirect Crypto CFDs investment companies.</p>
     
     <h2>Risk Categories & Scoring</h2>
     <table>
