--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>
     <h1>Crypto CFD Risk Assessment & Scoring Matrix</h1>
-    <p>Evaluating risk for onboarding indirect Crypto CFDs investment companies.</p>
-    
+    <p>Evaluating risk for onboarding Crypto CFDs investment companies.</p>
+    <p>Idea crated by Yiannakis p</>
     <h2>Risk Categories & Scoring</h2>
     <table>
         <tr>
