--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <h1>Crypto CFD Risk Assessment & Scoring Matrix</h1>
     <p>Evaluating risk for onboarding Crypto CFDs investment companies.</p>
-    <p>Idea crated by Yiannakis p</>
+    <p>... by Yiannakis Papageorgiou </>
     <h2>Risk Categories & Scoring</h2>
     <table>
         <tr>
