--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <td class="high">No License, History of Regulatory Issues</td>
         </tr>
         <tr>
-            <td><strong>Source of Rental Payments</strong></td>
+            <td><strong>Source of utility payments such as Rental Payments</strong></td>
             <td class="low">Licensed, Transparent Profits</td>
             <td class="medium">Speculative CFD Trading</td>
             <td class="high">Unknown or Suspicious Sources</td>
